# review-royale

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  fly.toml
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: error.rs  main.rs  state.rs
crates/api/src/routes/: achievements.rs  backfill.rs  categorize.rs  health.rs  leaderboard.rs  mod.rs  recalc.rs  repos.rs  seasons.rs  teams.rs  users.rs  webhooks.rs
crates/api/static/: index.html
crates/bot/: Cargo.toml
crates/bot/src/: commands.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  models.rs
crates/db/: Cargo.toml
crates/db/src/: achievements.rs  commits.rs  leaderboard.rs  leaderboard_test.rs  lib.rs  prs.rs  repos.rs  review_comments.rs  reviews.rs  seasons.rs  teams.rs  users.rs
crates/github/: Cargo.toml
crates/github/src/: client.rs  events.rs  lib.rs  verify.rs  webhooks.rs
crates/processor/: Cargo.toml
crates/processor/src/: achievements.rs  backfill.rs  categorize.rs  handler.rs  lib.rs  metrics.rs  metrics_test.rs  recalculate.rs  scores.rs  sessions.rs  sessions_test.rs  sync.rs
crates/processor/src/tests/: mod.rs  session_fixtures.rs
crates/processor/src/tests/fixtures/: pr_7944_commits.json  pr_7944_reviews.json  pr_8754_commits.json  pr_8754_reviews.json
migrations/: 001_initial.sql  002_sync_tracking.sql  003_commits.sql  004_review_comments.sql  005_review_xp.sql  006_session_count.sql  schema.sql
ui-tests/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json  verify-screenshots.ts
ui-tests/tests/: ui.spec.ts
